# Gemma_RA

./: .gitignore  README.md  gemma_ra.yaml  pyproject.toml
examples/mnist_mlp_task/: config.json  train.py
examples/regression_task/: INSTRUCTIONS.md  README.md  config.json  gemma_ra.example.yaml  train.py
examples/regression_task/logs/: history.jsonl  latest.json
src/gemma_ra/: __init__.py  __main__.py  cli.py
src/gemma_ra/agent/: orchestrator.py  tools.py
src/gemma_ra/analysis/: __init__.py  engine.py  renderers.py
src/gemma_ra/core/: __init__.py  artifacts.py  config.py  exceptions.py  model_client.py  schemas.py  tasks.py  workspace.py
src/gemma_ra/sources/: __init__.py  arxiv.py  local_papers.py
tests/: test_analysis_engine.py  test_arxiv.py  test_local_papers.py  test_orchestrator.py  test_workspace.py
